# Monopoly

./: .gitignore  .replit  CODE_CHANGE_REFERENCE.md  COMPLETION_SUMMARY.md  DOCUMENTATION_MANIFEST.md  IMPLEMENTATION_INDEX.md  OVERLAY_SYSTEM_IMPLEMENTATION.md  OVERLAY_SYSTEM_SUMMARY.md  OVERLAY_TESTING_GUIDE.md  README.md  README_OVERLAY_SYSTEM.md  TRADE_SYSTEM_ANALYSIS.md  package.json  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/monopoly-game/: DEPLOY_DOMAIN.md  RENDER_DEPLOY.md  ecosystem.config.cjs  index.html  package.json  vite.config.ts
artifacts/monopoly-game/.replit-artifact/: artifact.toml
artifacts/monopoly-game/deploy/: nginx-monopoly.conf
artifacts/monopoly-game/public/game/: board.js  flags.js  game.css  game.js  index.html  monopoly-tier-preview.html  random.js  worldwide.js
artifacts/monopoly-game/server/: engine.js  engine.py  server.js  server.py
artifacts/monopoly-game/src/: App.tsx
attached_assets/: Pasted-so-when-you-click-a-country-it-should-expand-to-give-a-_1774275491701.txt
