[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.2",
    "python-engineio>=4.13.1",
    "python-socketio>=5.16.1",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]
